--- a/md/SIBI/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/md/SIBI/app/src/main/res/layout/fragment_leaderboard.xml
@@ -113,7 +113,7 @@
                 android:background="@drawable/tab_indicator"/>
 
             <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tab"
+                android:id="@+id/leaderboard_tab"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/tab_background"
