--- a/md/SIBI/app/src/main/res/layout/item_my_record.xml
+++ b/md/SIBI/app/src/main/res/layout/item_my_record.xml
@@ -3,6 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/main_content"
+    android:paddingStart="8dp"
+    android:paddingEnd="8dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
     android:layout_marginTop="12dp"
     android:layout_marginBottom="12dp">
 
