--- a/md/SIBI/app/src/main/res/layout/fragment_home.xml
+++ b/md/SIBI/app/src/main/res/layout/fragment_home.xml
@@ -98,6 +98,7 @@
                 android:layout_marginEnd="24dp">
 
                 <LinearLayout
+                    android:id="@+id/learn_alphabet"
                     android:layout_weight="1"
                     android:layout_height="120dp"
                     android:layout_width="0dp"
