--- a/md/SIBI/app/src/main/res/layout/fragment_profile.xml
+++ b/md/SIBI/app/src/main/res/layout/fragment_profile.xml
@@ -48,7 +48,7 @@
                     android:textSize="18sp" />
 
                 <TextView
-                    android:id="@id/tv_email"
+                    android:id="@+id/tv_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
