--- a/md/SIBI/app/src/main/res/layout/item_my_record.xml
+++ b/md/SIBI/app/src/main/res/layout/item_my_record.xml
@@ -11,6 +11,7 @@
     android:layout_marginBottom="12dp">
 
     <TextView
+        android:id="@+id/timestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -21,6 +22,7 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/main_info_graphic"
