--- a/md/SIBI/app/src/main/res/layout/activity_practice.xml
+++ b/md/SIBI/app/src/main/res/layout/activity_practice.xml
@@ -79,13 +79,13 @@
         </LinearLayout>
 
         <android.widget.Button
-            android:id="@+id/btn_finish_practice"
+            android:id="@+id/btn_start_practice"
             android:layout_width="148dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:background="@drawable/fill_round_orange"
             android:padding="4dp"
-            android:text="Selesai"
+            android:text="Mulai"
             android:textAllCaps="false"
             android:textColor="#FFF"
             android:textSize="16sp"
