--- a/md/SIBI/app/src/main/res/layout/activity_practice.xml
+++ b/md/SIBI/app/src/main/res/layout/activity_practice.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:id="@+id/bg_mainmenu"
@@ -54,10 +55,12 @@
                 android:textSize="16sp"/>
 
             <ImageView
+                android:id="@+id/image_alphabet"
                 android:layout_width="88dp"
                 android:layout_height="88dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/alphabet_a"/>
+                tools:src="@drawable/alphabet_a"
+                />
 
         </LinearLayout>
 
