--- a/md/SIBI/app/src/main/res/layout/activity_practice_camera.xml
+++ b/md/SIBI/app/src/main/res/layout/activity_practice_camera.xml
@@ -52,16 +52,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.95">
 
-        <TextView
-            android:id="@+id/predictedTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center"
-            android:text=""
-            android:textColor="@android:color/black"
-            android:textSize="26sp"
-            tools:text="Label" />
+        <ImageView
+            android:id="@+id/image_alphabet"
+            android:layout_width="88dp"
+            android:layout_height="88dp"
+            android:layout_gravity="center_horizontal"
+            tools:src="@drawable/alphabet_a"
+            />
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -74,7 +71,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.85">
+        app:layout_constraintVertical_bias="0.79">
 
         <TextView
             android:id="@+id/debug_text"
