--- a/md/SIBI/app/src/main/res/layout/activity_contribute_result.xml
+++ b/md/SIBI/app/src/main/res/layout/activity_contribute_result.xml
@@ -2,9 +2,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.maingame.game.GameResultActivity">
+    tools:context=".ui.contribute.ContributeResultActivity"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:id="@+id/bg_mainmenu"
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Selamat!"
+            android:text="Terima kasih!"
             android:textStyle="bold"
             android:textColor="@color/dark_blue"
             android:textSize="24sp"/>
@@ -36,7 +36,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
             android:gravity="center"
-            android:text="Anda telah menyelesaikan permainan dengan baik."
+            android:text="Kamu Telah Berkontribusi Dengan Menambah Dataset."
             android:textColor="@color/dark_blue"
             android:textSize="16sp"/>
 
@@ -77,20 +77,20 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/btn_check_leaderboard"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:background="@drawable/fill_round_orange"
-            android:padding="4dp"
-            android:text="Leaderboard"
-            android:textAllCaps="false"
-            android:textColor="#FFF"
-            android:textSize="16sp"
-            android:textStyle="bold"/>
+<!--        <Button-->
+<!--            android:id="@+id/btn_check_leaderboard"-->
+<!--            android:layout_width="200dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="24dp"-->
+<!--            android:paddingStart="16dp"-->
+<!--            android:paddingEnd="16dp"-->
+<!--            android:background="@drawable/fill_round_orange"-->
+<!--            android:padding="4dp"-->
+<!--            android:text="Leaderboard"-->
+<!--            android:textAllCaps="false"-->
+<!--            android:textColor="#FFF"-->
+<!--            android:textSize="16sp"-->
+<!--            android:textStyle="bold"/>-->
 
         <Button
             android:id="@+id/btn_back_home"
