--- a/md/SIBI/app/src/main/res/layout/fragment_contribute.xml
+++ b/md/SIBI/app/src/main/res/layout/fragment_contribute.xml
@@ -77,7 +77,7 @@
                 android:textSize="16sp"/>
 
             <android.widget.Button
-                android:id="@+id/btn_sign_in"
+                android:id="@+id/btn_start_contrib"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
