--- a/md/SIBI/app/src/main/res/layout/fragment_contribute.xml
+++ b/md/SIBI/app/src/main/res/layout/fragment_contribute.xml
@@ -53,11 +53,19 @@
                 android:textColor="@color/dark_blue"
                 android:textSize="16sp"/>
 
-            <VideoView
-                android:id="@+id/contribut_video"
-                android:layout_marginTop="8dp"
+            <com.google.android.exoplayer2.ui.PlayerView
+                android:id="@+id/exoplayerView"
                 android:layout_width="match_parent"
-                android:layout_height="180dp" />
+                android:layout_height="200dp">
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="visible" />
+
+            </com.google.android.exoplayer2.ui.PlayerView>
 
         </LinearLayout>
 
