--- a/md/SIBI/app/src/main/res/drawable/tab_indicator.xml
+++ b/md/SIBI/app/src/main/res/drawable/tab_indicator.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    android:shape="rectangle"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="25dp"/>
-    <solid android:color="@color/regular_blue"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
+    <corners android:radius="25dp" />
+    <solid android:color="@color/regular_blue" />
+
 </shape>
