--- a/md/SIBI/app/src/main/res/layout/activity_detail_learn.xml
+++ b/md/SIBI/app/src/main/res/layout/activity_detail_learn.xml
@@ -61,6 +61,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:indeterminate="true"
+                    android:indeterminateTint="@color/regular_blue"
                     android:visibility="visible" />
 
             </com.google.android.exoplayer2.ui.PlayerView>
