--- a/md/SIBI/app/src/main/res/layout/fragment_globalrank.xml
+++ b/md/SIBI/app/src/main/res/layout/fragment_globalrank.xml
@@ -12,7 +12,8 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@color/dark_blue"
-        android:layout_margin="24dp"/>
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="8dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
