--- a/md/SIBI/app/src/main/res/layout/fragment_home.xml
+++ b/md/SIBI/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:id="@+id/bg_mainmenu"
@@ -45,15 +47,32 @@
             </LinearLayout>
 
             <!--progress user-->
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="24dp"
                 android:background="@drawable/main_info_graphic">
+                <TextView
+                    android:layout_width="140dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="24dp"
+                    android:layout_gravity="center_vertical"
+                    android:textStyle="bold"
+                    android:textSize="14sp"
+                    android:text="Siap belajar bahasa isyarat dengan cara yang menyenangkan?"/>
 
-            </LinearLayout>
+                <ImageView
+                    android:layout_width="148dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="24dp"
+                    android:layout_gravity="bottom|end"
+                    android:src="@drawable/img_hello"
+                    tools:ignore="ContentDescription" />
+
+            </FrameLayout>
 
         </LinearLayout>
 
