--- a/md/SIBI/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/md/SIBI/app/src/main/res/layout/fragment_leaderboard.xml
@@ -100,35 +100,40 @@
             </RelativeLayout>
         </LinearLayout>
 
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/leaderboard_tab"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="24dp"
+            android:background="@drawable/tab_background"
+            app:tabGravity="fill"
+            app:tabIndicatorGravity="stretch"
+            app:tabIndicatorAnimationMode="elastic"
+            app:tabIndicatorColor="@null"
+            app:tabIndicator="@drawable/tab_indicator"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="@color/white" />
+
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="24dp"
-            android:clipToPadding="false">
+            android:layout_height="match_parent">
 
-            <View
-                android:id="@+id/indicator"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:background="@drawable/tab_indicator"/>
-
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/leaderboard_tab"
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/leaderboard_viewpager"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@drawable/tab_background"
-                app:tabGravity="fill"
-                app:tabMode="fixed"
-                app:tabSelectedTextColor="#ffffff"
-                app:tabIndicatorColor="@null"
-                app:tabRippleColor="@null"/>
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+            <ProgressBar
+                android:id="@+id/loading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:indeterminate="true"
+                android:indeterminateTint="@color/regular_blue"
+                android:visibility="visible" />
 
         </FrameLayout>
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/leaderboard_viewpager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
 
     </LinearLayout>
 </FrameLayout>
