--- a/md/SIBI/app/src/main/res/layout/fragment_myrecord.xml
+++ b/md/SIBI/app/src/main/res/layout/fragment_myrecord.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,9 +17,9 @@
         android:layout_marginBottom="8dp"/>
 
     <TextView
-        android:id="@+id/status"
+        android:id="@+id/view_empty"
         android:text=""
-        tools:text="Loading..."
+        tools:text="Data Kosong"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -30,5 +31,14 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         tools:listitem="@layout/item_my_record"/>
+
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/regular_blue"
+        android:visibility="visible" />
 
 </LinearLayout>
