--- a/md/SIBI/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/md/SIBI/app/src/main/res/layout/fragment_leaderboard.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginBottom="64dp">
 
     <ImageView
         android:id="@+id/bg_mainmenu"
@@ -123,15 +124,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-            <ProgressBar
-                android:id="@+id/loading"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:indeterminate="true"
-                android:indeterminateTint="@color/regular_blue"
-                android:visibility="visible" />
 
         </FrameLayout>
 
