--- a/md/SIBI/app/src/main/res/layout/item_my_record.xml
+++ b/md/SIBI/app/src/main/res/layout/item_my_record.xml
@@ -5,7 +5,8 @@
     android:background="@drawable/main_content"
     android:paddingStart="8dp"
     android:paddingEnd="8dp"
-    android:layout_marginTop="12dp"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp"
     android:layout_marginBottom="12dp">
 
     <TextView
@@ -16,7 +17,7 @@
         android:layout_centerInParent="true"
         android:text="Judul Record"
         android:textColor="@color/dark_blue"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <TextView
@@ -28,7 +29,7 @@
         android:paddingEnd="16dp"
         android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         android:text="1800"/>
 
