--- a/md/SIBI/app/src/main/res/layout/activity_contribute_result.xml
+++ b/md/SIBI/app/src/main/res/layout/activity_contribute_result.xml
@@ -77,20 +77,14 @@
 
         </LinearLayout>
 
-<!--        <Button-->
-<!--            android:id="@+id/btn_check_leaderboard"-->
-<!--            android:layout_width="200dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="24dp"-->
-<!--            android:paddingStart="16dp"-->
-<!--            android:paddingEnd="16dp"-->
-<!--            android:background="@drawable/fill_round_orange"-->
-<!--            android:padding="4dp"-->
-<!--            android:text="Leaderboard"-->
-<!--            android:textAllCaps="false"-->
-<!--            android:textColor="#FFF"-->
-<!--            android:textSize="16sp"-->
-<!--            android:textStyle="bold"/>-->
+        <ProgressBar
+            android:id="@+id/loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:indeterminateTint="@color/regular_blue"
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/btn_back_home"
@@ -106,13 +100,6 @@
             android:textColor="#FFF"
             android:textSize="16sp"
             android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=""
-            />
     </LinearLayout>
 
 </FrameLayout>
