--- a/md/SIBI/app/src/main/res/layout/activity_game.xml
+++ b/md/SIBI/app/src/main/res/layout/activity_game.xml
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerInParent="true"
-                android:text="Level 1"
+                android:text="Medali"
                 android:textColor="@color/dark_blue"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -66,6 +66,7 @@
             android:padding="16dp"
             android:background="@drawable/main_content"
             android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -73,6 +74,15 @@
                 android:text="Peragakan kata dibawah ini!"
                 android:textColor="@color/dark_blue"
                 android:textSize="16sp"/>
+
+            <ProgressBar
+                android:id="@+id/loading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:indeterminate="true"
+                android:indeterminateTint="@color/regular_blue"
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/tv_word"
