--- a/md/SIBI/app/src/main/res/layout/activity_game_result.xml
+++ b/md/SIBI/app/src/main/res/layout/activity_game_result.xml
@@ -77,6 +77,15 @@
 
         </LinearLayout>
 
+        <ProgressBar
+            android:id="@+id/loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:indeterminateTint="@color/regular_blue"
+            android:visibility="visible" />
+
         <Button
             android:id="@+id/btn_check_leaderboard"
             android:layout_width="200dp"
@@ -107,12 +116,6 @@
             android:textSize="16sp"
             android:textStyle="bold"/>
 
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=""
-            />
     </LinearLayout>
 
 </FrameLayout>
