--- a/md/SIBI/app/src/main/res/layout/activity_practice_result.xml
+++ b/md/SIBI/app/src/main/res/layout/activity_practice_result.xml
@@ -77,6 +77,15 @@
 
         </LinearLayout>
 
+        <ProgressBar
+            android:id="@+id/loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:indeterminateTint="@color/regular_blue"
+            android:visibility="visible" />
+
         <android.widget.Button
             android:id="@+id/btn_back_home"
             android:layout_width="wrap_content"
@@ -91,13 +100,6 @@
             android:textColor="#FFF"
             android:textSize="16sp"
             android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="Loading"
-            />
 
     </LinearLayout>
 
