--- a/md/SIBI/app/src/main/res/layout/fragment_finish_practice.xml
+++ b/md/SIBI/app/src/main/res/layout/fragment_finish_practice.xml
@@ -75,6 +75,15 @@
 
         </LinearLayout>
 
+        <ProgressBar
+            android:id="@+id/loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:indeterminateTint="@color/regular_blue"
+            android:visibility="visible" />
+
         <android.widget.Button
             android:id="@+id/btn_back_home"
             android:layout_width="wrap_content"
