--- a/md/SIBI/app/src/main/res/layout/fragment_finisih_game.xml
+++ b/md/SIBI/app/src/main/res/layout/fragment_finisih_game.xml
@@ -72,8 +72,16 @@
                 android:textColor="@color/dark_blue"
                 android:textSize="16sp"/>
 
-
         </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:indeterminateTint="@color/regular_blue"
+            android:visibility="visible" />
 
         <android.widget.Button
             android:id="@+id/btn_check_leaderboard"
