--- a/md/SIBI/app/src/main/res/layout/fragment_home.xml
+++ b/md/SIBI/app/src/main/res/layout/fragment_home.xml
@@ -144,6 +144,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/learn_word"
                     android:layout_width="0dp"
                     android:layout_height="100dp"
                     android:layout_marginStart="10dp"
